--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -7,9 +7,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="History"
+        android:text="@string/history"
         android:textSize="24sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
+        android:fontFamily="poppins"
         android:gravity="center"
         android:padding="16dp"/>
 
