--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.VisualWasteSorter" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:fontFamily">@font/poppins</item>
     </style>
 
     <style name="Theme.VisualWasteSorter" parent="Base.Theme.VisualWasteSorter" />
